--- a/css/style.css
+++ b/css/style.css
@@ -301,11 +301,11 @@ label {
   position: relative;
   top: 24%;
   font-size: 0.88rem;
-  white-space: wrap;
   text-align: center; }
   label:focus {
     outline-width: 0; }
   @media (min-width: 480px) {
     label {
       top: 23%;
-      font-size: 1rem; } }
+      font-size: 1rem;
+      white-space: nowrap; } }
